2004-03-04 Eran Domb <erand@mainsoft.com>

	* Node.cs : Added.
	* Index.cs : Rollback last changes.
	
2004-03-03  Atsushi Enomoto <atsushi@ximian.com>

	* Index.cs : justa build fix.

2004-03-03 Eran Domb <erand@mainsoft.com>
	
	* Index.cs : Added.
	* Constraint.cs, ForeignKeyConstraint.cs, UniqueConstraint, ConstraintCollection.cs, DataColumn.cs,
	DataRow.cs, DataRowCollection.cs, DataSet.cs, DataTable.cs : Changes made for using indexes on tables.
	This changes made for performance improvement.

2004-02-08 Eran Domb <erand@mainsoft.com>

	* XmlSchemaMapper.cs : Read columns is they were written as SimpleContent or as Attributes.

2004-02-08 Eran Domb <erand@mainsoft.com>

	* DataSet.cs: Fix some bugs in ReadXml().

2004-02-04 Lluis Sanchez Gual <lluis@ximian.com>

	* DataSet.cs: Added missing method that broke the build.

2004-02-04 Eran Domb <erand@mainsoft.com>

	* DataRowCollection.cs (InsertAt): Add a check for null row. Replace check of IndexOf with RowId for
	better performance.
	* DataSet.cs (GetTableSchema) : Add supprot for simple content columns. Change the condition for a case
	when all column are attributes (elements count is 0), we still want to add the relations. No relations
	can be on simple contents.
	(AddUniqueConstraints) Check that the column of the constraint are not hidden.
	(AddForeignKeys) Check that the relation has constraints attach to it.
	* XmlConstants.cs : Added constant.

2004-02-04 Eran Domb <erand@mainsoft.com>
	
	* DataSet.cs : GetSchemaSerializable() return null and not BuildSchema().
	DoWriteXmlSchema calls BuildSchema ().

2004-02-04 Lluis Sanchez Gual <lluis@ximian.com>

	* DataRow.cs: Added SetOriginalValue(), which is used to set the original
	  value of a column.
	* DataRowCollection.cs: In InsertAt(), perform the correct checks and
	  attach the row.
	* DataSet.cs: Fixed method GetChanges(): Parent rows of modified rows must
	  also be added to the dataset.